force-app/main/default/objects/Account/fields/BDS_Sync__c.field-meta.xml
<CustomField>
    <fullName>BDS_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable sync with Dutch Business Data</description>
    <inlineHelpText>Select to enable sync with Dutch Business Data</inlineHelpText>
    <label>Business Data Sync</label>
    <type>Checkbox</type>
</CustomField>