force-app/main/default/objects/Account/fields/Business_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Business_Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The business data fetched from Company.info</description>
    <inlineHelpText>The business data fetched from Company.info</inlineHelpText>
    <label>Business Data</label>
    <referenceTo>Business_Dossier__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>