force-app/main/default/objects/Account/fields/Company_Info_Sync__c.field-meta.xml
<CustomField>
    <fullName>Company_Info_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable sync with Company.info</description>
    <inlineHelpText>Select to enable sync with Company.info</inlineHelpText>
    <label>Company Info Sync</label>
    <type>Checkbox</type>
</CustomField>