force-app/main/default/objects/Account/fields/Dossier_Number__c.field-meta.xml
<CustomField>
    <fullName>Dossier_Number__c</fullName>
    <description>The Dutch Chamber of Commerce number, consisting of 8 numbers (e.g., 00123456).  This number is unique and will not change as long as the organisation exists.  Subsidiaries (‘Nevenvestigingen’) of the organisation are registered using the same dossier number.</description>
    <externalId>true</externalId>
    <label>Dossier Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>