force-app/main/default/objects/Account/fields/Dutch_Business_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Business_Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dutch Business Dossier</label>
    <referenceTo>Dutch_Business_Dossier__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>