force-app/main/default/objects/Account/fields/International_Address_Data__c.field-meta.xml
<CustomField>
    <fullName>International_Address_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The international address used as data source for the data on this Account</description>
    <inlineHelpText>The international address used as data source for the data on this Account</inlineHelpText>
    <label>International Address Data</label>
    <referenceTo>International_Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>